gcc/testsuite/rust/rustc/ui/parser/removed-syntax-mut-vec-expr.rs
fn main() {
    let v = [mut 1, 2, 3, 4]; // { dg-error "" "" { target *-*-* } }
}

